Rephrase some things

--- a/index.haml
+++ b/index.haml
@@ -56,9 +56,11 @@
           Software Engineer
         .tidbits
           .tidbit
-            Prototyped, Designed and was Lead Engineer on Rockmelt's web application.
+            Prototyped, designed on Rockmelt's web application.
           .tidbit
-            Evaluated javascript libraries and reverse engineered performance limitations.
+            Lead engineer of the Rockmelt web application team as we grew from 1 to 5.
+          .tidbit
+            Evaluated Javascript libraries and reverse engineered performance limitations.
           .tidbit
             Worked on integrating Facebook features into native UI of a browser.
       .entry
@@ -73,13 +75,13 @@
           Platform Engineer
         .tidbits
           .tidbit
-            Tasked with optimizing and refactoring the existing C++ trading platform code.
+            Optimized and refactored the existing C++ trading platform code.
           .tidbit
-            Suppored the trading staff in usage of the platform.
+            Supported the trading staff in usage of the platform.
           .tidbit
-            Reverse Engineered remote service implementations to optimize timings.
+            Reverse engineered remote service implementations to optimize timings.
           .tidbit
-            Moved trading platform into managed source control (Git)
+            Moved trading platform into managed source control (Git).
       .entry
         .header
           .name
@@ -92,9 +94,9 @@
           Software Development Engineer Intern
         .tidbits
           .tidbit
-            Developed the User Interface for a Client/Server platform tool for remotely managing environment variables.
+            Developed the user interface for a client/server platform tool for remotely managing environment variables.
           .tidbit
-            Designed, Developed and Deployed a ASP.NET and WCF powered web application for managing subscriptions.
+            Designed, developed and Deployed an ASP.NET and WCF powered web application for managing subscriptions.
           .tidbit
             Bridged three separate teams and their services to create the above unified subscription manager.
           .tidbit
@@ -185,6 +187,24 @@
             Vim
           .entry
             git
+          .entry
+            XCode
+          .entry
+            Visual Studio
+          .entry
+            Photoshop
+          .entry
+            Sublime Text
+          .entry
+            TextMate
+      .skill-section
+        .name
+          Systems
+        .entries
+          .entry
+            Mac OS
+          .entry
+            Linux (Debian)
           .entry
             XCode
           .entry
