Fix listings of systems and tools

--- a/index.haml
+++ b/index.haml
@@ -56,7 +56,7 @@
           Software Engineer
         .tidbits
           .tidbit
-            Prototyped, designed on Rockmelt's web application.
+            Prototyped, designed and developed the core of Rockmelt's web application.
           .tidbit
             Lead engineer of the Rockmelt web application team as we grew from 1 to 5.
           .tidbit
@@ -197,6 +197,14 @@
             Sublime Text
           .entry
             TextMate
+          .entry
+            EC2
+          .entry
+            Linode
+          .entry
+            Google App Engine
+          .entry
+            Rake Pipeline
       .skill-section
         .name
           Systems
@@ -206,13 +214,7 @@
           .entry
             Linux (Debian)
           .entry
-            XCode
+            Windows
           .entry
-            Visual Studio
-          .entry
-            Photoshop
-          .entry
-            Sublime Text
-          .entry
-            TextMate
+            Red Hat
 
