--- a/index.haml
+++ b/index.haml
@@ -16,33 +16,6 @@
           (650) 262 0112
     .subsection
       .title
-        Education
-      .entry
-        .header
-          .name
-            Northeastern University
-          .location
-            Boston, MA
-          .dates
-            2006-2010
-        .position
-          Bachelor of Science in Computer Science and Information Science
-        .offsetList
-          .name
-            Honors
-          .items
-            .item
-              GPA 3.6/4.0
-            .item
-              Deans List 2006-2010
-            .item
-              Named One of Top 100 Influential Seniors
-            .item
-              Received one of sixteen 2010 Outstanding Co-op Awards
-            .item
-              First Place in 2010 National Collegiate Cyber Defence Competition
-    .subsection
-      .title
         Work Experience
       .entry
         .header
@@ -79,7 +52,7 @@
           .tidbit
             Supported the trading staff in usage of the platform.
           .tidbit
-            Reverse engineered remote service implementations to optimize timings.
+            Reverse engineered remote service implementations for optimal entry of orders during market open.
           .tidbit
             Moved trading platform into managed source control (Git).
       .entry
@@ -94,7 +67,7 @@
           Software Development Engineer Intern
         .tidbits
           .tidbit
-            Developed the user interface for a client/server platform tool for remotely managing environment variables.
+            Developed the user interface for a client/server platform tool to remotely manage environment variables.
           .tidbit
             Designed, developed and Deployed an ASP.NET and WCF powered web application for managing subscriptions.
           .tidbit
@@ -143,6 +116,33 @@
             Designed the roll out of a MS Team Foundation Server for our application development teams.
           .tidbit
             Provided support for servers via the Microsoft Operations Manager Console and WSUS.
+    .subsection
+      .title
+        Education
+      .entry
+        .header
+          .name
+            Northeastern University
+          .location
+            Boston, MA
+          .dates
+            2006-2010
+        .position
+          Bachelor of Science in Computer Science and Information Science
+        .offsetList
+          .name
+            Honors
+          .items
+            .item
+              GPA 3.6/4.0
+            .item
+              Deans List 2006-2010
+            .item
+              Named One of Top 100 Influential Seniors
+            .item
+              Received one of sixteen 2010 Outstanding Co-op Awards
+            .item
+              First Place in 2010 National Collegiate Cyber Defence Competition
       .entry
         .header
           .name
@@ -205,6 +205,8 @@
             Google App Engine
           .entry
             Rake Pipeline
+          .entry
+            Node
       .skill-section
         .name
           Systems
@@ -212,9 +214,9 @@
           .entry
             Mac OS
           .entry
-            Linux (Debian)
-          .entry
-            Windows
+            Debain Linux
           .entry
             Red Hat
+          .entry
+            Windows
 
