--- a/index.haml
+++ b/index.haml
@@ -35,7 +35,7 @@
           .tidbit
             Evaluated Javascript libraries and reverse engineered performance limitations.
           .tidbit
-            Worked on integrating Facebook features into native UI of a browser.
+            Worked on integrating Facebook features into native UI of our Chromium derivitave browser.
       .entry
         .header
           .name
@@ -73,7 +73,7 @@
           .tidbit
             Bridged three separate teams and their services to create the above unified subscription manager.
           .tidbit
-            Contributed to software services on a high volume concurrency messaging platform developed in MSIT.
+            Contributed to software services on a high volume concurrent messaging platform developed in MSIT.
           .tidbit
             Maintained our team's 50+ server development and test laboratory.
       .entry
@@ -113,7 +113,7 @@
           .tidbit
             Supported the business as a service desk technician.
           .tidbit
-            Designed the roll out of a MS Team Foundation Server for our application development teams.
+            Designed the rollout of a MS Team Foundation Server for our application development teams.
           .tidbit
             Provided support for servers via the Microsoft Operations Manager Console and WSUS.
     .subsection
@@ -214,7 +214,7 @@
           .entry
             Mac OS
           .entry
-            Debain Linux
+            Debian Linux
           .entry
             Red Hat
           .entry
