--- a/scss/resume.scss
+++ b/scss/resume.scss
@@ -111,6 +111,20 @@ div {
     .entry {
       display: inline-block;
       margin: 0 2px;
+
+      &:first-child {
+        &:before {
+          display: none;
+        }
+      }
+
+      &:before {
+        content: "|";
+        display: inline-block;
+        color: #999999;
+        margin: 0;
+        padding: 0;
+      }
     }
   }
 }
