--- a/index.haml
+++ b/index.haml
@@ -50,7 +50,7 @@
           .tidbit
             Optimized and refactored the existing C++ trading platform code.
           .tidbit
-            Supported the trading staff in usage of the platform.
+            Worked with the trading staff in developing strategies on the trading platform.
           .tidbit
             Reverse engineered remote service implementations for optimal entry of orders during market open.
           .tidbit
