--- a/src/scss/resume.styl
+++ b/src/scss/resume.styl
@@ -67,6 +67,7 @@ div {
       .location {
         display: inline-block;
         font-size: 14px;
+        padding: 0 8px;
       }
       
       .dates {
