Add 500Friends and fix spelling/wording

--- a/src/index.jade
+++ b/src/index.jade
@@ -14,15 +14,24 @@ html
       .title Work Experience
       .entry
         .header
+          .name 500Friends Inc
+          .location San Francisco, CA
+          .dates August 2013 - Present
+        .position Senior Software Engineer
+        .tidbits
+          .tidbit Built a platform for cross-compiling an extension to Chrome, Firefox and IE.
+          .tidbit Rebuilt our templating and branding system for extensions.
+      .entry
+        .header
           .name Rockmelt Inc
           .location Mountain View, CA
-          .dates November 2010 - Present
+          .dates November 2010 - August 2013
         .position Software Engineer
         .tidbits
           .tidbit Prototyped, designed and developed the core of Rockmelt's web application.
           .tidbit Lead engineer of the Rockmelt web application team as we grew from 1 to 5.
           .tidbit Evaluated Javascript libraries and reverse engineered performance limitations.
-          .tidbit Worked on integrating Facebook features into native UI of our Chromium derivitave browser.
+          .tidbit Worked on integrating Facebook features into native UI of our Chromium derivative browser.
       .entry
         .header
           .name Hun Management
@@ -42,22 +51,22 @@ html
         .position Software Development Engineer Intern
         .tidbits
           .tidbit Developed the user interface for a client/server platform tool to remotely manage environment variables.
-          .tidbit Designed, developed and Deployed an ASP.NET and WCF powered web application for managing subscriptions.
+          .tidbit Designed, developed and deployed an ASP.NET and WCF powered web application for managing email subscriptions.
           .tidbit Bridged three separate teams and their services to create the above unified subscription manager.
-          .tidbit Contributed to software services on a high volume concurrent messaging platform developed in MSIT.
+          .tidbit Contributed to high volume database synchronization messaging platform.
           .tidbit Maintained our team's 50+ server development and test laboratory.
       .entry
         .header
           .name Google Inc
           .location Pheonix, AZ
           .dates January - August 2008
-        .position IT Field Technician
+        .position IT Field Technician Intern
         .tidbits
-          .tidbit Designed and deployed award-winning prototype chat-bot for automation in the Field Tech organization.
+          .tidbit Designed and deployed award-winning prototype chat system for automation in the Field Tech organization.
           .tidbit Contributed to a Ruby on Rails application for indexing and registration of internal applications.
           .tidbit Supported engineering and sales offices in the Southwest Region of the US both remotely and locally.
           .tidbit Consulted with engineers on second tier support issues, identifying requirements and implementing solutions.
-          .tidbit Prototyped a Ruby on Rails contact application for maintaining variable friendship admittance to personal data.
+          .tidbit Prototyped a Ruby on Rails contact application for maintaining variable admittance to personal data.
       .entry
         .header
           .name Fisher Investments
@@ -67,7 +76,7 @@ html
         .tidbits
           .tidbit Rotated through various positions in the IT department to expand knowledge and experience.
           .tidbit Supported the business as a service desk technician.
-          .tidbit Designed the rollout of a MS Team Foundation Server for our application development teams.
+          .tidbit Designed the roll out of a MS Team Foundation Server for our application development teams.
           .tidbit Provided support for servers via the Microsoft Operations Manager Console and WSUS.
     .subsection
       .title Education
@@ -84,7 +93,7 @@ html
             .item Deans List 2006-2010
             .item Named One of Top 100 Influential Seniors
             .item Received one of sixteen 2010 Outstanding Co-op Awards
-            .item First Place in 2010 National Collegiate Cyber Defence Competition
+            .item First Place in 2010 National Collegiate Cyber Defense Competition
       .entry
         .header
           .name Crystal Springs Uplands School
@@ -126,6 +135,6 @@ html
         .entries
           .entry Mac OS
           .entry Debian Linux
-          .entry Red Hat
-          .entry Windows
+          .entry Arch Linux
+          .entry RHEL/CentOS
 
