--- a/src/index.jade
+++ b/src/index.jade
@@ -8,7 +8,7 @@ html
       .name Channing Conger
       .subheader
         .email cconger@gmail.com
-        .address 1280 Lawrence Station Rd Sunnyvale, CA 94049
+        .address 1280 Lawrence Station Rd Sunnyvale, CA 94089
         .phone (650) 262 0112
     .subsection
       .title Work Experience
@@ -16,11 +16,11 @@ html
         .header
           .name 500Friends Inc
           .location San Francisco, CA
-          .dates August 2013 - Present
+          .dates August 2013 - December 2013
         .position Senior Software Engineer
         .tidbits
           .tidbit Built a platform for cross-compiling an extension to Chrome, Firefox and IE.
-          .tidbit Rebuilt our templating and branding system for extensions.
+          .tidbit Rebuilt templating and branding system for extensions.
       .entry
         .header
           .name Rockmelt Inc
@@ -119,17 +119,12 @@ html
         .name Tools
         .entries
           .entry Vim
-          .entry git
-          .entry XCode
-          .entry Visual Studio
+          .entry Git
+          .entry Node
+          .entry Grunt
           .entry Photoshop
           .entry Sublime Text
           .entry TextMate
-          .entry EC2
-          .entry Linode
-          .entry Google App Engine
-          .entry Rake Pipeline
-          .entry Node
       .skill-section
         .name Systems
         .entries
