--- a/src/scss/resume.styl
+++ b/src/scss/resume.styl
@@ -107,8 +107,12 @@ div {
 .skill-section {
   .name {
     font-weight: bold;
+    display: inline-block;
+    width: 100px;
   }
   .entries {
+    display: inline-block;
+
     .entry {
       display: inline-block;
       margin: 0 2px;
@@ -123,7 +127,7 @@ div {
         content: "|";
         display: inline-block;
         color: #999999;
-        margin: 0;
+        margin: 0 4px 0 0;
         padding: 0;
       }
     }
