Move skills above Work Experience
Page breaks avoided between entries
Added pdf version.

--- a/src/scss/resume.styl
+++ b/src/scss/resume.styl
@@ -44,7 +44,6 @@ div {
 .subsection {
   margin-top: 30px;
 
-
   .title {
     font-size: 24px;
     font-weight: bold;
@@ -53,6 +52,7 @@ div {
 
   .entry {
     margin-bottom: 20px;
+    page-break-after: avoid;
 
     .header {
       position: relative;
