--- a/src/index.jade
+++ b/src/index.jade
@@ -11,6 +11,41 @@ html
         .address 1280 Lawrence Station Rd Sunnyvale, CA 94089
         .phone (650) 262 0112
     .subsection
+      .title Domain Skills
+      .skill-section
+        .name Languages
+        .entries
+          .entry JavaScript
+          .entry Go
+          .entry C++
+          .entry Java
+          .entry Python
+          .entry Ruby
+      .skill-section
+        .name Technologies
+        .entries
+          .entry WebGL
+          .entry Websockets
+          .entry Ember.js
+          .entry Backbone.js
+      .skill-section
+        .name Tools
+        .entries
+          .entry Vim
+          .entry Git
+          .entry Node
+          .entry Grunt
+          .entry Photoshop
+          .entry Sublime Text
+          .entry TextMate
+      .skill-section
+        .name Systems
+        .entries
+          .entry Mac OS
+          .entry Debian Linux
+          .entry Arch Linux
+          .entry RHEL/CentOS
+    .subsection
       .title Work Experience
       .entry
         .header
@@ -104,32 +139,4 @@ html
             .item Named One of Top 100 Influential Seniors
             .item Received one of sixteen 2010 Outstanding Co-op Awards
             .item First Place in 2010 National Collegiate Cyber Defense Competition
-    .subsection
-      .title Domain Skills
-      .skill-section
-        .name Languages
-        .entries
-          .entry JavaScript
-          .entry Go
-          .entry C++
-          .entry Java
-          .entry Python
-          .entry Ruby
-      .skill-section
-        .name Tools
-        .entries
-          .entry Vim
-          .entry Git
-          .entry Node
-          .entry Grunt
-          .entry Photoshop
-          .entry Sublime Text
-          .entry TextMate
-      .skill-section
-        .name Systems
-        .entries
-          .entry Mac OS
-          .entry Debian Linux
-          .entry Arch Linux
-          .entry RHEL/CentOS
 
