--- a/src/index.jade
+++ b/src/index.jade
@@ -11,42 +11,18 @@ html
         .address 1280 Lawrence Station Rd Sunnyvale, CA 94089
         .phone (650) 262 0112
     .subsection
-      .title Domain Skills
-      .skill-section
-        .name Languages
-        .entries
-          .entry JavaScript
-          .entry Go
-          .entry C++
-          .entry Java
-          .entry Python
-          .entry Ruby
-      .skill-section
-        .name Technologies
-        .entries
-          .entry WebGL
-          .entry Websockets
-          .entry Ember.js
-          .entry Backbone.js
-      .skill-section
-        .name Tools
-        .entries
-          .entry Vim
-          .entry Git
-          .entry Node
-          .entry Grunt
-          .entry Photoshop
-          .entry Sublime Text
-          .entry TextMate
-      .skill-section
-        .name Systems
-        .entries
-          .entry Mac OS
-          .entry Debian Linux
-          .entry Arch Linux
-          .entry RHEL/CentOS
-    .subsection
       .title Work Experience
+      .entry
+        .header
+          .name Out of Worlds
+          .location Sunnyvale, CA
+          .dates December 2013 - Present
+        .position Founder / Engineer
+        .tidbits
+          .tidbit Prototyped a WebGL based 3D online multiplayer game using Three.js.
+          .tidbit Implemented lag mitigating network prototcol in JS and Go over Websockets.
+          .tidbit Built a persistent store backend in Go utilizing Redis for game state storage.
+          .tidbit Created my own assets and content using Blender.
       .entry
         .header
           .name 500Friends Inc
@@ -113,16 +89,35 @@ html
           .tidbit Supported the business as a service desk technician.
           .tidbit Designed the roll out of a MS Team Foundation Server for our application development teams.
           .tidbit Provided support for servers via the Microsoft Operations Manager Console and WSUS.
-      .entry
-        .header
-          .name Crystal Springs Uplands School
-          .location Hillsborough, CA
-          .dates Summers 2004, 2005, 2006
-        .position Desktop Support Intern
-        .tidbits
-          .tidbit Provided support to faculty and staff business departments on all technology issues.
-          .tidbit Maintained campus email and data storage servers.
-          .tidbit Directed and trained two subordinates during my third summer.
+    .subsection
+      .title Domain Skills
+      .skill-section
+        .name Languages
+        .entries
+          .entry JavaScript
+          .entry Go
+          .entry C++
+          .entry Python
+          .entry Ruby
+          .entry Java
+      .skill-section
+        .name Tools
+        .entries
+          .entry Vim
+          .entry Git
+          .entry Grunt
+          .entry Gulp
+          .entry Node
+          .entry Photoshop
+          .entry Sublime Text
+          .entry TextMate
+      .skill-section
+        .name Platforms
+        .entries
+          .entry Mac OS X
+          .entry Ubuntu
+          .entry CentOS
+          .entry Windows
     .subsection
       .title Education
       .entry
