Updated resume to include time at Interana
Additionally specified that there are languages I have not used in several years
"Rusty Languages"

--- a/src/index.jade
+++ b/src/index.jade
@@ -14,9 +14,20 @@ html
       .title Work Experience
       .entry
         .header
+          .name Interana
+          .location Palo Alto, CA
+          .dates May - September 2014
+        .position Engineer
+        .tidbits
+          .tidbit Introduced a build process and the front-end framework React.js to the web application.
+          .tidbit Removed and absorbed antiquated PHP into the new Python and Torando backend.
+          .tidbit Built a flow control wrapper which allowed heavy non-async code to use the evented nature of Tornado.
+          .tidbit Tweaked Nginx and Web Server configuration and deployment to improve throughput and performance.
+      .entry
+        .header
           .name Out of Worlds
           .location Sunnyvale, CA
-          .dates December 2013 - Present
+          .dates December 2013 - May 2014
         .position Founder / Engineer
         .tidbits
           .tidbit Prototyped a WebGL based 3D online multiplayer game using Three.js.
@@ -92,22 +103,26 @@ html
     .subsection
       .title Domain Skills
       .skill-section
-        .name Languages
+        .name Strong Languages
         .entries
           .entry JavaScript
           .entry Go
-          .entry C++
           .entry Python
+      .skill-section
+        .name Rusty Languages
+        .entries
+          .entry C++
           .entry Ruby
           .entry Java
       .skill-section
-        .name Tools
+        .name Software
         .entries
           .entry Vim
           .entry Git
+          .entry React.js
+          .entry Node
           .entry Grunt
           .entry Gulp
-          .entry Node
           .entry Photoshop
           .entry Sublime Text
           .entry TextMate
@@ -117,7 +132,8 @@ html
           .entry Mac OS X
           .entry Ubuntu
           .entry CentOS
-          .entry Windows
+          .entry AWS
+          .entry Digital Ocean
     .subsection
       .title Education
       .entry
