--- a/html.hbs
+++ b/html.hbs
@@ -3,7 +3,8 @@
   <head>
     <style type="text/css">
       body {
-        margin: 0;
+        max-width: 1024px;
+        margin: 0 auto;
         padding: 2em;
         font-family: "helvetica neue", "sans-serif";
         font-size: 14px;
